--- a/config/rails_best_practices.yml
+++ b/config/rails_best_practices.yml
@@ -31,6 +31,7 @@ RemoveUnusedMethodsInControllersCheck:
   - Users::ArticlesController#article_attributes
   - Users::RegistrationsController#update_resource
   - Users::RegistrationsController#devise_parameter_sanitizer
+  - Users::CommentsController#comment_attributes
 RemoveUnusedMethodsInHelpersCheck: { except_methods: [] }
 RemoveUnusedMethodsInModelsCheck: { except_methods: [] }
 ReplaceComplexCreationWithFactoryMethodCheck: { attribute_assignment_count: 2 }
