--- a/config/rails_best_practices.yml
+++ b/config/rails_best_practices.yml
@@ -32,6 +32,7 @@ RemoveUnusedMethodsInControllersCheck:
   - Users::RegistrationsController#update_resource
   - Users::RegistrationsController#devise_parameter_sanitizer
   - Users::CommentsController#comment_attributes
+  - Users::BaseController#devise_parameter_sanitizer
 RemoveUnusedMethodsInHelpersCheck: { except_methods: [] }
 RemoveUnusedMethodsInModelsCheck: { except_methods: [] }
 ReplaceComplexCreationWithFactoryMethodCheck: { attribute_assignment_count: 2 }
